# Scrible

./: CONTRIBUTION.md  Cargo.toml  LICENSE  README.md
src/: app.rs  buffer.rs  clipboard.rs  cursor.rs  editor.rs  file_io.rs  highlight.rs  history.rs  input.rs  main.rs  mod.rs  mode.rs  renderer.rs  status.rs
